2007-10-17  Zoltan Varga  <vargaz@gmail.com>

	* mini-x86.c (mono_arch_emit_prolog): Increase the size allocated for the
	prolog. Fixes #331958.

2007-10-15  Zoltan Varga  <vargaz@gmail.com>

	* mini-sparc.h mini-sparc.c: Add support for the common vtable trampoline.

Mon Oct 15 11:18:52 CEST 2007 Paolo Molaro <lupus@ximian.com>

	* mini-ppc.c, mini-ppc.h: ppc support for the common vtable
	trampoline.

Mon Oct 15 10:41:27 CEST 2007 Paolo Molaro <lupus@ximian.com>

	* mini-amd64.c, mini-amd64.h: amd64 support for the common vtable
	trampoline.

Mon Oct 15 10:39:26 CEST 2007 Paolo Molaro <lupus@ximian.com>

	* mini-x86.c, mini-x86.h: x86 support for the common vtable
	trampoline.

Mon Oct 15 10:37:15 CEST 2007 Paolo Molaro <lupus@ximian.com>

	* mini-trampolines.c: changed the magic rampoline to understand
	the common vtable trampoline method: the method to invoke is
	determined by the vtable displacement of the call.

Mon Oct 15 10:35:12 CEST 2007 Paolo Molaro <lupus@ximian.com>

	* mini.c, mini.h: register the common vtable trampoline if the
	architecture supports it.

Mon Oct 15 09:50:52 CEST 2007 Paolo Molaro <lupus@ximian.com>

	* cpu-amd64.md: use the correct max length for tls_get.

2007-10-14  Zoltan Varga  <vargaz@gmail.com>

	* mini.c (mono_method_to_ir): Use mini_get_class in CEE_LDELEM_ANY and
	CEE_STELEM_ANY. Fixes #333696.

Thu Oct 11 18:04:29 CEST 2007 Paolo Molaro <lupus@ximian.com>

	* exceptions-x86.c: provide more graceful handling of the case where
	we followed a bogus function pointer from managed code (bug #332866).

2007-10-11  Mark Probst  <mark.probst@gmail.com>

	* mini.h, mini.c: Introduced the MonoGenericSharingContext, which
	replaces the generic_shared flag and will carry more information
	in the future.

	* generic-sharing.c: Added mini_type_stack_size() which allows
	allows open types if given a generic sharing context.
	mini_get_basic_type_from_generic() takes a
	MonoGenericSharingContext* instead of a MonoCompile* now.
